src/snapshot_middleware/snapshots/librojo__snapshot_middleware__dir__test__empty_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
    - /foo/init.luau
    - /foo/init.server.luau
    - /foo/init.client.luau
    - /foo/init.local.luau
    - /foo/init.legacy.luau
    - /foo/init.csv
    - /foo/init.lua
    - /foo/init.server.lua
    - /foo/init.client.lua
    - /foo/init.meta.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: Folder
properties: {}
children: []
